# ion-lang

./: CMakeLists.txt  CmakePresets.json  ion.code-workspace  t.cpp
include/: Error.hpp  Maybe.hpp  concepts.hpp  pch.hpp  print.hpp
include/compiler/: Compiler.hpp  File.hpp  Lexer.hpp  SyntaxError.hpp  Token.hpp  TokenIterator.hpp
include/compiler/ast/: AST.hpp  FileAST.hpp  FunctionAST.hpp  ImportAST.hpp  ProjectAST.hpp  ScopeAST.hpp  StructAST.hpp
include/compiler/ast/parsers/: FunctionParser.hpp  ImportParser.hpp  Parser.hpp  ScopeParser.hpp  StructParser.hpp
include/utils/: ArgParser.hpp  Error.hpp  ErrorOr.hpp  Maybe.hpp  container.hpp  fs.hpp  print.hpp
src/compiler/: Compiler.cpp  File.cpp  Lexer.cpp  SyntaxError.cpp  Token.cpp  TokenIterator.cpp  main.cpp
src/compiler/ast/: AST.cpp  ImportParser.cpp
src/compiler/ast/parsers/: FunctionParser.cpp  ImportParser.cpp  Parser.cpp  ScopeParser.cpp  StructParser.cpp
src/utils/: ArgParser.cpp  fs.cpp  print.cpp
test/: internals.ion  main.ion
test/sub/: export_tests.ion  external.ion
vscode-ext/: CHANGELOG.md  README.md  package.json  test.ts  vsc-extension-quickstart.md
vscode-ext/syntaxes/: ion.tmLanguage.json
